--- a/cppfront/mainwindow.ui
+++ b/cppfront/mainwindow.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>693</width>
-    <height>472</height>
+    <width>676</width>
+    <height>491</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,11 +49,14 @@ background-color : white;</string>
    <widget class="QPushButton" name="push_sin">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>10</x>
       <y>120</y>
       <width>60</width>
       <height>40</height>
      </rect>
+    </property>
+    <property name="whatsThis">
+     <string>A</string>
     </property>
     <property name="text">
      <string>sin</string>
@@ -59,11 +65,17 @@ background-color : white;</string>
    <widget class="QPushButton" name="push_cos">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>70</x>
       <y>120</y>
       <width>60</width>
       <height>40</height>
      </rect>
+    </property>
+    <property name="whatsThis">
+     <string>@</string>
+    </property>
+    <property name="accessibleName">
+     <string/>
     </property>
     <property name="text">
      <string>cos</string>
@@ -72,7 +84,7 @@ background-color : white;</string>
    <widget class="QPushButton" name="push_asin">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>130</x>
       <y>120</y>
       <width>60</width>
       <height>40</height>
@@ -85,7 +97,7 @@ background-color : white;</string>
    <widget class="QPushButton" name="push_acos">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>190</x>
       <y>120</y>
       <width>60</width>
       <height>40</height>
@@ -98,8 +110,8 @@ background-color : white;</string>
    <widget class="QPushButton" name="push_plus">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>200</y>
+      <x>190</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -128,8 +140,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_AC">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>200</y>
+      <x>10</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -154,12 +166,15 @@ QPushButton:pressed {
     <property name="text">
      <string>AC</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="push_leftscob">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>200</y>
+      <x>70</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -188,8 +203,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_rightscob">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>200</y>
+      <x>130</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -218,8 +233,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_mult">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>255</y>
+      <x>190</x>
+      <y>280</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -248,8 +263,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_7">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>255</y>
+      <x>10</x>
+      <y>280</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -261,8 +276,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_8">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>255</y>
+      <x>70</x>
+      <y>280</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -274,8 +289,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_9">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>255</y>
+      <x>130</x>
+      <y>280</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -287,8 +302,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_stepen">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>305</y>
+      <x>190</x>
+      <y>330</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -317,8 +332,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_4">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>305</y>
+      <x>10</x>
+      <y>330</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -330,8 +345,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_5">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>305</y>
+      <x>70</x>
+      <y>330</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -343,8 +358,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_6">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>305</y>
+      <x>130</x>
+      <y>330</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -356,8 +371,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_1">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>355</y>
+      <x>10</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -369,8 +384,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>355</y>
+      <x>70</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -382,8 +397,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_3">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>355</y>
+      <x>130</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -395,8 +410,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_minus">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>200</y>
+      <x>250</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -425,7 +440,7 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_tan">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>250</x>
       <y>120</y>
       <width>60</width>
       <height>40</height>
@@ -438,8 +453,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_div">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>255</y>
+      <x>250</x>
+      <y>280</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -468,8 +483,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_mod">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>305</y>
+      <x>250</x>
+      <y>330</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -498,8 +513,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_dot">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>405</y>
+      <x>130</x>
+      <y>430</y>
       <width>60</width>
       <height>61</height>
      </rect>
@@ -511,8 +526,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_0">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>405</y>
+      <x>10</x>
+      <y>430</y>
       <width>121</width>
       <height>61</height>
      </rect>
@@ -524,10 +539,10 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_ravno">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>360</y>
+      <x>190</x>
+      <y>380</y>
       <width>120</width>
-      <height>103</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
@@ -554,7 +569,7 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_atan">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>10</x>
       <y>150</y>
       <width>60</width>
       <height>40</height>
@@ -567,7 +582,7 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_sqrt">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>190</x>
       <y>150</y>
       <width>60</width>
       <height>40</height>
@@ -577,10 +592,10 @@ QPushButton:pressed {
      <string>sqrt</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="push_log10">
+   <widget class="QPushButton" name="push_log">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>70</x>
       <y>150</y>
       <width>60</width>
       <height>40</height>
@@ -590,23 +605,23 @@ QPushButton:pressed {
      <string>log10</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="push_log">
+   <widget class="QPushButton" name="push_ln">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>130</x>
       <y>150</y>
       <width>60</width>
       <height>40</height>
      </rect>
     </property>
     <property name="text">
-     <string>log</string>
+     <string>ln</string>
     </property>
    </widget>
    <widget class="QPushButton" name="push_X">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>250</x>
       <y>150</y>
       <width>60</width>
       <height>40</height>
@@ -614,6 +629,38 @@ QPushButton:pressed {
     </property>
     <property name="text">
      <string>X</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="result_code">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>70</y>
+      <width>0</width>
+      <height>0</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+  qproperty-alignment: 'AlignVCenter | AlignRight';
+  border: 1px solid gray;
+}
+
+background-color : white;</string>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
