--- a/cppfront/mainwindow.ui
+++ b/cppfront/mainwindow.ui
@@ -920,8 +920,17 @@ background-color : white;</string>
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
+    <property name="inputMask">
+     <string/>
+    </property>
     <property name="text">
-     <string>15</string>
+     <string>17</string>
+    </property>
+    <property name="maxLength">
+     <number>8</number>
+    </property>
+    <property name="dragEnabled">
+     <bool>false</bool>
     </property>
     <property name="clearButtonEnabled">
      <bool>true</bool>
