--- a/cppfront/mainwindow.ui
+++ b/cppfront/mainwindow.ui
@@ -13,6 +13,9 @@
     <height>500</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::NoFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -30,6 +33,9 @@
      <font>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
@@ -124,7 +130,6 @@ background-color : white;</string>
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -158,7 +163,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -192,7 +196,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -226,7 +229,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -260,7 +262,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -333,7 +334,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -445,7 +445,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -495,7 +494,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -529,7 +527,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -589,7 +586,6 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
       <underline>false</underline>
@@ -759,14 +755,23 @@ background-color : white;</string>
       <height>23</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
+    <property name="acceptDrops">
+     <bool>true</bool>
+    </property>
     <property name="inputMask">
      <string/>
     </property>
     <property name="text">
      <string>0</string>
     </property>
-    <property name="clearButtonEnabled">
+    <property name="readOnly">
      <bool>true</bool>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -797,17 +802,20 @@ background-color : white;</string>
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="text">
      <string>-17</string>
     </property>
     <property name="readOnly">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="placeholderText">
      <string/>
     </property>
     <property name="clearButtonEnabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLineEdit" name="line_Y_from">
@@ -825,6 +833,9 @@ background-color : white;</string>
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="statusTip">
      <string/>
     </property>
@@ -835,13 +846,13 @@ background-color : white;</string>
      <string>-15</string>
     </property>
     <property name="readOnly">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="placeholderText">
      <string/>
     </property>
     <property name="clearButtonEnabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -898,11 +909,17 @@ background-color : white;</string>
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="text">
      <string>17</string>
     </property>
-    <property name="clearButtonEnabled">
+    <property name="readOnly">
      <bool>true</bool>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLineEdit" name="line_Y_to">
@@ -920,6 +937,9 @@ background-color : white;</string>
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="inputMask">
      <string/>
     </property>
@@ -932,8 +952,11 @@ background-color : white;</string>
     <property name="dragEnabled">
      <bool>false</bool>
     </property>
-    <property name="clearButtonEnabled">
+    <property name="readOnly">
      <bool>true</bool>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="push_graf">
