--- a/cppfront/mainwindow.ui
+++ b/cppfront/mainwindow.ui
@@ -157,7 +157,7 @@ QPushButton:pressed {
      <rect>
       <x>10</x>
       <y>190</y>
-      <width>60</width>
+      <width>121</width>
       <height>60</height>
      </rect>
     </property>
@@ -188,42 +188,9 @@ QPushButton:pressed {
    <widget class="QPushButton" name="push_leftscob">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>190</y>
-      <width>60</width>
-      <height>60</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <italic>false</italic>
-      <bold>false</bold>
-      <underline>false</underline>
-      <strikeout>false</strikeout>
-     </font>
-    </property>
-    <property name="whatsThis">
-     <string>(</string>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-  background-color: rgb(255, 169, 198);
-}
-QPushButton:pressed {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                      stop: 0 #BEBEBE, stop: 1 #D7D7D7);
-}</string>
-    </property>
-    <property name="text">
-     <string>(</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="push_rightscob">
-    <property name="geometry">
-     <rect>
       <x>130</x>
       <y>190</y>
-      <width>60</width>
+      <width>61</width>
       <height>60</height>
      </rect>
     </property>
@@ -236,7 +203,7 @@ QPushButton:pressed {
      </font>
     </property>
     <property name="whatsThis">
-     <string>)</string>
+     <string>(</string>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
@@ -248,7 +215,7 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>)</string>
+     <string>( )</string>
     </property>
    </widget>
    <widget class="QPushButton" name="push_mult">
