--- a/cppfront/mainwindow.ui
+++ b/cppfront/mainwindow.ui
@@ -735,7 +735,7 @@ background-color : white;</string>
      <string>0</string>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="clearButtonEnabled">
      <bool>false</bool>
@@ -776,7 +776,7 @@ background-color : white;</string>
      <string>-17</string>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="placeholderText">
      <string/>
@@ -813,7 +813,7 @@ background-color : white;</string>
      <string>-15</string>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="placeholderText">
      <string/>
@@ -883,7 +883,7 @@ background-color : white;</string>
      <string>17</string>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="clearButtonEnabled">
      <bool>false</bool>
@@ -920,7 +920,7 @@ background-color : white;</string>
      <bool>false</bool>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="clearButtonEnabled">
      <bool>false</bool>
